--- a/style.css
+++ b/style.css
@@ -1,1 +1,4 @@
-
+body{background-color:#...;text-aling;justify;font-size:18px;}
+h1 {text-aling:center;background-color:#...;color:#...:}
+h3 {text-aling:justify;color:#...}
+b {colo
