--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-body{background-color:#...;text-aling;justify;font-size:18px;}
-h1 {text-aling:center;background-color:#...;color:#...:}
-h3 {text-aling:justify;color:#...}
-b {color:bisque;pont-size:18px;}
-i{color:brown; pont-size:18px}
-header,pooter{background-color:antiquewhite:#...} text-aling:center; font-size 20px;}
-main{background-color:brown:#...;}
-.primeiroparagrafo{text-aling:justify;pont-size:18px;border:black solid 2px;padding:10px;margin:10px}
+body{background-color:blueviolet;text-align:justify;font-size:18px;}
+h1 {text-align:center;background-color:rgb(26, 10, 10)}
+h3 {text-align:justify;color:#...}
+b {color:bisque;font-size:18px;}
+i{color:brown; font-size:18px}
+header,footer{background-color:antiquewhite; text-align:center; font-size: 20px;}
+main{background-color:brown}
+.primeiroparagrafo{text-align:justify;font-size:18px;border:rgb(26, 10, 10) solid 2px;padding:10px;margin:10px}
 #tituloimagem{width:5%;height:57.;}
-#lista{display:inline-black;}
-#lista{display:inline-black}
+#lista{display:inline-block;}
+
